--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "test": "jest"
   },
   "jest": {
-    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "testEnvironment": "jest-environment-jsdom",
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
     "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
+      "^.+\\.tsx?$": "ts-jest"
     },
     "moduleNameMapper": {
       "\\.(css|less|scss|sass)$": "identity-obj-proxy"
@@ -36,7 +42,6 @@
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18",
-    "react-select": "^5.8.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.4"
@@ -63,8 +68,10 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
+    "react-select": "^5.8.0",
     "tailwindcss": "^3.4.7",
     "typescript": "^5"
   }
